# aiquerychat

./: .env.example  .gitignore  Makefile  PROMPT.md  README.md  TODO.md  pyproject.toml  schemaContMgmtApp.md
src/aiquerychat/: __init__.py  __main__.py  cli.py  db.py  export.py  llm.py  schema.py  tui.py
tests/: test_async.py  test_db.py  test_export.py  test_llm.py  test_schema.py  test_tui.py
